--- a/Statistical-Analysis.ipynb
+++ b/Statistical-Analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "684cef83",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "96001dfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = "
+    "df = pd.read_csv(\"dataset.csv\")"
    ]
   },
   {
