Project almost done

--- a/hating_web.ipynb
+++ b/hating_web.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "63d726a8",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "de83bfd6",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "[520 rows x 17 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,10 +339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "87f23b1a",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -550,13 +550,31 @@
     "        print(f\"This dataset shows that, there is a week Realtionship between {columns[feature]} & Diabetes with percentage of {percentage}\")\n",
     "    else:\n",
     "        print(f\"This dataset shows that, there is a strong Realtionship between {columns[feature]} & Diabetes with percentage of {percentage}\")\n",
-    "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "86fafefc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "two_way_table = pd.crosstab(df.infected, df['Gender'])\n",
+    "plot_title = \"Relationship between \" + 'Gender' + \" & Diabetes\"\n",
+    "two_way_table.plot.bar(rot=0, title=plot_title )\n",
+    "percentage = df[(df.infected == 'Positive') & (df['Gender'] == 'Yes')].shape[0] / num_of_infected\n",
+    "\n",
+    "if(percentage < 0.5):\n",
+    "    print(f\"This dataset shows that, there is a week Realtionship between {columns[feature]} & Diabetes with percentage of {percentage}\")\n",
+    "else:\n",
+    "    print(f\"This dataset shows that, there is a strong Realtionship between {columns[feature]} & Diabetes with percentage of {percentage}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c28bd865",
    "metadata": {},
    "outputs": [
@@ -869,7 +887,7 @@
        "[192 rows x 17 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,8 +898,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a0d9e1c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40,\n",
+       "       41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57,\n",
+       "       58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 79, 85, 90],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ages = df['Age'].unique() #.sort() #_values()\n",
+    "ages.sort()\n",
+    "ages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "918b2fb7",
+   "metadata": {},
+   "source": [
+    "### Maximum & minimum age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed27fd41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ages.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "64f4fe36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ages.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "caad4866",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of infected people in range (0 , 40) = 0.265625\n",
+      "Percentage of infected people in range (40 , 60) = 0.528125\n",
+      "Percentage of infected people in range (60 , 100) = 0.20625\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_ranges = [0, 40, 60, 100]\n",
+    "\n",
+    "\n",
+    "\n",
+    "for age in range(0, len(age_ranges) -1 ):   \n",
+    "    percentage = df[(df['Age'] >= age_ranges[age]) & (df['Age'] < age_ranges[age + 1]) & (df.infected == 'Positive')].shape[0] / num_of_infected  # suppose that range list always have even size number\n",
+    "    print(f\"Percentage of infected people in range ({age_ranges[age]} , {age_ranges[age + 1]}) = {percentage}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8b88b59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169efc21",
    "metadata": {},
    "outputs": [],
    "source": []
