--- a/final_code.ipynb
+++ b/final_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "63d726a8",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "de83bfd6",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "[520 rows x 17 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "87f23b1a",
    "metadata": {
     "scrolled": true
@@ -545,6 +545,7 @@
     "    plot_title = \"Relationship between \" + columns[feature] + \" & Diabetes\"\n",
     "    two_way_table.plot.bar(rot=0, title=plot_title )\n",
     "    percentage = df[(df.infected == 'Positive') & (df[columns[feature]] == 'Yes')].shape[0] / num_of_infected\n",
+    "    plt.savefig(columns[feature] + '_Diabetes.png',dpi=300)\n",
     "    \n",
     "    if(percentage < 0.5):\n",
     "        print(f\"This dataset shows that, there is a week Realtionship between {columns[feature]} & Diabetes with percentage of {percentage}\")\n",
@@ -555,18 +556,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53159bd4",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "dc8e0541",
+   "execution_count": 24,
+   "id": "8426baab",
    "metadata": {},
    "outputs": [
     {
@@ -598,6 +589,8 @@
     "male_percentage = df[(df.infected == 'Positive') & (df['Gender'] == 'Male')].shape[0] / num_of_infected\n",
     "female_percentage = df[(df.infected == 'Positive') & (df['Gender'] == 'Female')].shape[0] / num_of_infected\n",
     "\n",
+    "plt.savefig('Gender_Diabetes.png',dpi=300)\n",
+    "\n",
     "if(male_percentage < 0.5):\n",
     "    print(f\"This dataset shows that, there is a week Realtionship between Male & Diabetes with percentage of {male_percentage}\")\n",
     "else:\n",
@@ -613,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "c28bd865",
    "metadata": {},
    "outputs": [
@@ -926,7 +919,7 @@
        "[192 rows x 17 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "a0d9e1c8",
    "metadata": {},
    "outputs": [
@@ -950,7 +943,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "ed27fd41",
    "metadata": {},
    "outputs": [
@@ -981,7 +974,7 @@
        "90"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "64f4fe36",
    "metadata": {},
    "outputs": [
@@ -1002,7 +995,7 @@
        "16"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "caad4866",
    "metadata": {
     "scrolled": true
@@ -1049,8 +1042,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "169efc21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Polyuria</th>\n",
+       "      <th>Polydipsia</th>\n",
+       "      <th>sudden weight loss</th>\n",
+       "      <th>weakness</th>\n",
+       "      <th>Polyphagia</th>\n",
+       "      <th>Genital thrush</th>\n",
+       "      <th>visual blurring</th>\n",
+       "      <th>Itching</th>\n",
+       "      <th>Irritability</th>\n",
+       "      <th>delayed healing</th>\n",
+       "      <th>partial paresis</th>\n",
+       "      <th>muscle stiffness</th>\n",
+       "      <th>Alopecia</th>\n",
+       "      <th>Obesity</th>\n",
+       "      <th>infected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Age, Gender, Polyuria, Polydipsia, sudden weight loss, weakness, Polyphagia, Genital thrush, visual blurring, Itching, Irritability, delayed healing, partial paresis, muscle stiffness, Alopecia, Obesity, infected]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Age'] == '']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e24bb123",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1058,7 +1117,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b123c787",
+   "id": "63f7cfbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1a8e9be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a54de7d",
    "metadata": {},
    "outputs": [],
    "source": []
